--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,8 +8,9 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.9"
-jax = "^0.4.25"
-jaxlib = "^0.4.25"
+jax = "^0.4.23"
+jaxlib = "^0.4.23"
+blackjax = "^1.1.0"
 numpy = "^1.26.4"
 scipy = "^1.12.0"
 
