--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ python = "^3.9"
 jax = "^0.4.23"
 jaxlib = "^0.4.23"
 blackjax = "^1.1.0"
+enterprise-pulsar = "^3.3.0"
 numpy = "^1.26.4"
 scipy = "^1.12.0"
 
