--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,21 +1,42 @@
-[tool.poetry]
-name = "etudes"
-version = "0.1.0"
-description = "PTA analyses with JAX and HMC"
-authors = ["Gabe Freedman <freedma5@uwm.edu>"]
-license = "MIT"
-readme = "README.md"
-
-[tool.poetry.dependencies]
-python = "^3.9"
-jax = "^0.4.23"
-jaxlib = "^0.4.23"
-blackjax = "^1.1.0"
-enterprise-pulsar = "^3.3.0"
-numpy = "^1.26.4"
-scipy = "^1.12.0"
-
-
 [build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
+requires = ["flit_core >= 3.4"]
+build-backend = "flit_core.buildapi"
+
+[project]
+name = "etudes"
+authors = [{name = "Gabe Freedman", email = "freedma5@uwm.edu}]
+description = "PTA analyses with HMC and JAX"
+readme = "README.md"
+classifiers = ["License :: OSI Approved :: MIT License"]
+dynamic = ["version"]
+requires-python = ">=3.9"
+dependencies = [
+    "jax[cpu]",
+    "jaxlib",
+    "enterprise-pulsar",
+    "blackjax"
+]
+
+[project.optional-dependencies]
+dev = [
+    "black",
+    "flake8",
+    "flake8-pyproject"
+]
+gpu = [
+    "jax[cuda12]"
+]
+
+[tool.flake8]
+max-line-length = 120
+exclude = [
+    "__pycache__",
+    ".git",
+    ".ipynb_checkpoints",
+    ".tox",
+    ".venv",
+    "build",
+    "dist",
+    "docs",
+    "venv"
+]
